# src/inventory/InventoryController.ts
@@ -1,18 +1,19 @@
-import { Controller, Route, Get, Tags, Query } from 'tsoa'
+import { Controller, Route, Get, Tags, Query, Security, Request, Response } from 'tsoa'
 import { getInventory } from './inventory-service'
 
 type Client = 'web'|'mobile'
 type Lang = 'en-us'|'en-gb'|'de-de'|'es-es'
 
-@Route('inventory')
+interface ValidattionError {
+  message: 'Validation failed';
+  details: { [name: string]: unknown };
+}
+
+@Route('/inventory')
 @Tags('InventoryController')
 export class InventoryController extends Controller {
   /**
    * Retrieves the inventory.
-   * @param token Token parameter is simplified token which will provoke unauthorize access to the service.
-   * This is a mendatory field, if not provided an unauthenticated error will be send.
-   * @example token "user-1"
-   *
    * @param count Count is used to determine how many quantity will be send.
    * Its default value is **5**.
    * @isInt count
@@ -30,19 +31,19 @@ export class InventoryController extends Controller {
    * @param lang Lang parameter is used to select the currency for price.
    * This is an optional param, default value is **en-us**.
    */
+
   @Get()
-  public get (
-    @Query()
-      token: string,
-    @Query()
-      count: number = 5,
-    @Query()
-    page: number = 0,
-    @Query()
-    client: Client = 'web',
-    @Query()
-    lang: Lang = 'en-us'
+  @Security('api_key')
+  @Response<string>(500, 'Internal server error')
+  @Response<ValidattionError>(422, 'Validation Failed')
+  public async get (
+    @Query() count: number = 5,
+    @Query() page: number = 0,
+    @Query() client: Client = 'web',
+    @Query() lang: Lang = 'en-us',
+    @Request() request: any
   ) {
+    this.setStatus(201)
     return getInventory(lang)
   }
 }
